Fix visual pages text overflow gradient and spacing between images

--- a/public/stylesheets/project.css
+++ b/public/stylesheets/project.css
@@ -407,3 +407,7 @@ a {
 		width: 93%;
 	}
 }
+
+.images img {
+	margin-bottom: 25px;
+}
