--- a/public/stylesheets/visual.css
+++ b/public/stylesheets/visual.css
@@ -20,21 +20,21 @@
 	width: 20px;
 	height: auto;
 }
-.topSpacing{
-	width: 100%;
-	height: 100px;
-}
+
 img{
 	width: 50%;
 	height: auto;
 	position: relative;
 	display: inline-block;
 }
+
 .images{
 	width: 100%;
 	height: auto;
 	margin-left: 5%;
+	margin-top: 100px;
 }
+
 h1{
 	font-weight: 700;
 	font-size: 2.5em;
@@ -56,12 +56,32 @@ p{
 }
 .content{
 	width: 30%;
-	height: 70%;
+	max-height: 70%;
 	position: fixed;
 	top: 70px;
 	margin-left: 62%;
-	text-overflow: scroll;
+
+	max-width: 500px;
 }
+
+.content:after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    height: 60px;
+    width: 100%;
+    background: linear-gradient(to bottom, rgba(0,0,0,0), rgba(255,255,255,1) 70%);
+    margin-top: -10px;
+}
+
+.content p {
+	max-height: 280px;
+	margin-bottom: 0;
+	padding-bottom: 60px;
+	box-sizing: border-box;
+}
+
 .background{
 	top: 580px;
 	left: 0;
@@ -71,35 +91,35 @@ p{
 	z-index: -1;
 	opacity: .5;
 }
-.overflow{
-	height: 65px;
-	width: 30%;
-	margin-left: 62%;
-    background: linear-gradient(to bottom, rgba(0,0,0,0), rgba(255,255,255,1) 70%);
-    position: fixed;
-	top: 72%;
-	z-index: 2;
-}
+
 @media (max-width: 720px) {
-.content{
-	width: 80%;
-	position: relative;
-	margin-left: 10%;
-	top:100px;
+	.content{
+		width: 80%;
+		position: relative;
+		margin-left: 10%;
+		top:100px;
+	}
+	.images{
+		width: 100%;
+		height: auto;
+		margin-left: 10%;
+		position: relative;
+	}
+	img{
+		width: 80%;
+		height: auto;
+		position: relative;
+		display: inline-block;
+	}
+	.overflow{
+		display: none;
+	}
 }
-.images{
-	width: 100%;
-	height: auto;
-	margin-left: 10%;
-	position: relative;
+
+.images img {
+	margin-bottom: 25px;
 }
-img{
-	width: 80%;
-	height: auto;
-	position: relative;
-	display: inline-block;
-}
-.overflow{
-	display: none;
-}
+
+h1 {
+	overflow: hidden;
 }
